# quizknaller

./: .gitignore  DEPLOYMENT.md  NETCUP_DEPLOYMENT.md  README.md  TEAM_MODE_README.md  database.py  main.py  passenger_wsgi.py  pyproject.toml  quizzes.json  render.yaml  requirements.txt  shell.nix  upload_to_netcup.sh
static/: creator.css  creator.html  creator.js  host.css  host.html  host.js  player.css  player.html  player.js  sounds.js
