[project]
name = "mpquiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.122.0",
    "pillow>=12.0.0",
    "python-socketio>=5.15.0",
    "qrcode>=8.2",
    "uvicorn>=0.38.0",
    "pydantic>=2.7.0",
    "typing_extensions>=4.12.2",
]
